Revert "Update extend tags"
This reverts commit 4b7ac41bdcf8c5980966fd1cbc5cf42501b8d764.